--- a/admin.html
+++ b/admin.html
@@ -1,156 +1,94 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Painel do Administrador - Papelprint</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin | Painel de Pontos</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Inter', sans-serif;
     }
   </style>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCzy5KwdkK0GCzZ5o6i1lOK7WsdheSYV9g",
+      authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
+      projectId: "controle-de-ponto-papelprint",
+      storageBucket: "controle-de-ponto-papelprint.appspot.com",
+      messagingSenderId: "630875968731",
+      appId: "1:630875968731:web:2dc067757a090bc16c28fe"
+    };
+
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.firestore();
+  </script>
 </head>
-<body class="bg-gray-100 p-4">
-  <div class="max-w-6xl mx-auto">
-    <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">Painel do Administrador</h1>
+<body class="bg-gray-50 p-6">
+  <div class="flex justify-between items-center mb-6">
+    <h1 class="text-2xl font-semibold text-gray-800">Painel Administrativo</h1>
+    <button onclick="logout()" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded">Sair</button>
+  </div>
 
-    <div class="flex flex-wrap justify-between items-end gap-4 mb-6">
-      <div>
-        <label class="block text-sm font-medium text-gray-700">Funcionário</label>
-        <input type="text" id="filtroNome" class="w-48 p-2 border border-gray-300 rounded-lg" placeholder="Buscar por nome..." />
-      </div>
-
-      <div>
-        <label class="block text-sm font-medium text-gray-700">Tipo de Ponto</label>
-        <select id="filtroTipo" class="w-48 p-2 border border-gray-300 rounded-lg">
-          <option value="">Todos</option>
-          <option value="Entrada">Entrada</option>
-          <option value="Saída para Almoço">Saída para Almoço</option>
-          <option value="Retorno do Almoço">Retorno do Almoço</option>
-          <option value="Saída">Saída</option>
-          <option value="Ponto Extra">Ponto Extra</option>
-        </select>
-      </div>
-
-      <div>
-        <label class="block text-sm font-medium text-gray-700">Data</label>
-        <input type="date" id="filtroData" class="w-48 p-2 border border-gray-300 rounded-lg" />
-      </div>
-
-      <button onclick="exportarCSV()" class="bg-cyan-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-cyan-600">
-        <i class="fa-solid fa-file-csv mr-2"></i>Exportar CSV
-      </button>
-    </div>
-
-    <div class="overflow-x-auto">
-      <table class="min-w-full bg-white rounded-xl shadow-md overflow-hidden">
-        <thead>
-          <tr class="bg-gray-200 text-left">
-            <th class="py-3 px-4">Funcionário</th>
-            <th class="py-3 px-4">Tipo</th>
-            <th class="py-3 px-4">Horário</th>
-            <th class="py-3 px-4">Localização</th>
-            <th class="py-3 px-4">Selfie</th>
-          </tr>
-        </thead>
-        <tbody id="tabelaRegistros">
-          <!-- Registros inseridos dinamicamente -->
-        </tbody>
-      </table>
-    </div>
+  <div class="bg-white p-6 rounded-xl shadow">
+    <h2 class="text-lg font-semibold mb-4">Registros de Ponto</h2>
+    <table class="w-full table-auto text-sm text-left">
+      <thead>
+        <tr class="bg-gray-100 text-gray-700">
+          <th class="px-4 py-2">Funcionário</th>
+          <th class="px-4 py-2">Tipo</th>
+          <th class="px-4 py-2">Data</th>
+          <th class="px-4 py-2">Horário</th>
+          <th class="px-4 py-2">Imagem</th>
+        </tr>
+      </thead>
+      <tbody id="tabela-pontos" class="text-gray-700"></tbody>
+    </table>
   </div>
 
   <script>
-    const registros = JSON.parse(localStorage.getItem('registrosPonto')) || [];
-    const tabela = document.getElementById('tabelaRegistros');
-    const filtroNome = document.getElementById('filtroNome');
-    const filtroTipo = document.getElementById('filtroTipo');
-    const filtroData = document.getElementById('filtroData');
+    auth.onAuthStateChanged(user => {
+      if (!user) {
+        window.location.href = 'login.html';
+      } else {
+        carregarPontos();
+      }
+    });
 
-    function renderizarTabela() {
+    async function carregarPontos() {
+      const tabela = document.getElementById('tabela-pontos');
       tabela.innerHTML = '';
-      const nome = filtroNome.value.toLowerCase();
-      const tipo = filtroTipo.value;
-      const data = filtroData.value;
 
-      const filtrados = registros.filter(reg => {
-        const nomeOk = reg.funcionario.toLowerCase().includes(nome);
-        const tipoOk = tipo === '' || reg.tipo === tipo;
-        const dataOk = !data || new Date(reg.horario).toISOString().slice(0, 10) === data;
-        return nomeOk && tipoOk && dataOk;
-      });
+      const snapshot = await db.collection('pontos').orderBy('horario', 'desc').limit(100).get();
+      snapshot.forEach(doc => {
+        const ponto = doc.data();
+        const dataHora = new Date(ponto.horario);
+        const data = dataHora.toLocaleDateString('pt-BR');
+        const hora = dataHora.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
 
-      filtrados.forEach(reg => {
         const tr = document.createElement('tr');
-        tr.className = 'border-b';
         tr.innerHTML = `
-          <td class="py-2 px-4">${reg.funcionario}</td>
-          <td class="py-2 px-4">${reg.tipo}</td>
-          <td class="py-2 px-4">${new Date(reg.horario).toLocaleString('pt-BR')}</td>
-          <td class="py-2 px-4">Lat: ${reg.lat.toFixed(5)}, Lng: ${reg.lng.toFixed(5)}</td>
-          <td class="py-2 px-4">
-            <img src="${reg.imagem}" class="w-16 h-16 rounded-lg object-cover border" alt="Selfie">
+          <td class="px-4 py-2">${ponto.nome}</td>
+          <td class="px-4 py-2">${ponto.tipo}</td>
+          <td class="px-4 py-2">${data}</td>
+          <td class="px-4 py-2">${hora}</td>
+          <td class="px-4 py-2">
+            <a href="${ponto.imagem}" target="_blank" class="text-blue-500 hover:underline">Ver</a>
           </td>
         `;
         tabela.appendChild(tr);
       });
     }
 
-    function exportarCSV() {
-      let csv = 'Funcionário,Tipo,Horário,Latitude,Longitude\n';
-      const nome = filtroNome.value.toLowerCase();
-      const tipo = filtroTipo.value;
-      const data = filtroData.value;
-
-      const filtrados = registros.filter(reg => {
-        const nomeOk = reg.funcionario.toLowerCase().includes(nome);
-        const tipoOk = tipo === '' || reg.tipo === tipo;
-        const dataOk = !data || new Date(reg.horario).toISOString().slice(0, 10) === data;
-        return nomeOk && tipoOk && dataOk;
-      });
-
-      filtrados.forEach(r => {
-        csv += `${r.funcionario},${r.tipo},${new Date(r.horario).toLocaleString('pt-BR')},${r.lat},${r.lng}\n`;
-      });
-      const blob = new Blob([csv], { type: 'text/csv' });
-      const link = document.createElement('a');
-      link.href = URL.createObjectURL(blob);
-      link.download = 'registros_filtrados.csv';
-      link.click();
+    function logout() {
+      auth.signOut();
+      window.location.href = 'login.html';
     }
-
-    filtroNome.addEventListener('input', renderizarTabela);
-    filtroTipo.addEventListener('change', renderizarTabela);
-    filtroData.addEventListener('change', renderizarTabela);
-
-    renderizarTabela();
   </script>
-  <!-- Firebase App -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
-
-<!-- Firebase Auth -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
-
-<!-- Firebase Firestore -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
-
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCzy5KwdkK0GCzZ5o6i1lOK7WsdheSYV9g",
-    authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
-    projectId: "controle-de-ponto-papelprint",
-    storageBucket: "controle-de-ponto-papelprint.appspot.com",
-    messagingSenderId: "630875968731",
-    appId: "1:630875968731:web:2dc067757a090bc16c28fe"
-  };
-
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-  const auth = firebase.auth();
-</script>
-
 </body>
 </html>
